name:                apiary-authenticate
version:             0.14.1
synopsis:            authenticate support for apiary web framework.
description:
  example: <https://github.com/philopon/apiary/blob/master/examples/auth.hs>
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           experimental
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.Authenticate
                       Web.Apiary.Authenticate.Explicit
  other-modules:       Web.Apiary.Authenticate.Internal
  build-depends:       base                 >=4.6   && <4.8
                     , apiary               >=0.14  && <0.16
                     , apiary-clientsession >=0.9   && <0.14
                     , authenticate         >=1.3   && <1.4
                     , http-client          >=0.3   && <0.4
                     , http-client-tls      >=0.2   && <0.3
                     , data-default-class   >=0.0   && <0.1
                     , bytestring           >=0.10  && <0.11
                     , text                 >=1.1   && <1.2
                     , resourcet            >=1.1   && <1.2
                     , http-types           >=0.8   && <0.9
                     , blaze-builder        >=0.3   && <0.4
                     , reflection           >=1.4   && <1.6
                     , binary               >=0.7   && <0.8

  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
