name:                apiary-clientsession
version:             0.9.0.1
synopsis:            clientsession support for apiary web framework.
description:
  examples:
    .
    <https://github.com/philopon/apiary/blob/master/examples/csrf.hs>
    .
    <https://github.com/philopon/apiary/blob/master/examples/auth.hs>
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           experimental
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.ClientSession
                       Web.Apiary.ClientSession.Explicit
  other-modules:       Web.Apiary.ClientSession.Internal
  other-extensions:    
  build-depends:       base               >=4.6   && <4.8
                     , bytestring         >=0.10  && <0.11
                     , apiary             >=0.9   && <0.10
                     , apiary-cookie      >=0.9   && <0.10
                     , clientsession      >=0.9   && <0.10
                     , tagged             >=0.7   && <0.8
                     , time               >=1.4   && <1.5
                     , data-default-class >=0.0   && <0.1
                     , reflection         >=1.4   && <1.5
                     , binary             >=0.7   && <0.8
                     , crypto-random      >=0.0   && <0.1
                     , cprng-aes          >=0.5   && <0.6
                     , base64-bytestring  >=1.0   && <1.1
                     , http-types         >=0.8   && <0.9

  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
