name:                apiary-clientsession
version:             1.3.0
synopsis:            clientsession support for apiary web framework.
description:
  examples:
    .
    <https://github.com/philopon/apiary/blob/master/examples/session.hs>
    .
    <https://github.com/philopon/apiary/blob/master/examples/auth.hs>
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014-2015 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           stable
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.Session.ClientSession
  build-depends:       base               >=4.6   && <4.8
                     , apiary             >=1.2   && <1.4
                     , apiary-cookie      >=1.2   && <1.4
                     , apiary-session     >=1.2   && <1.4

                     , clientsession      >=0.9   && <0.10
                     , vault              >=0.3   && <0.4
                     , cereal             >=0.4   && <0.5
                     , bytestring         >=0.10  && <0.11
                     , time               >=1.4   && <1.5
                     , unix-compat        >=0.4   && <0.5
                     , data-default-class >=0.0   && <0.1

  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
