name:                apiary-cookie
version:             0.4.0.0
x-revision:          1
synopsis:            Cookie support for apiary web framework.
description:
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           experimental
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.Cookie
  other-modules:       Web.Apiary.Cookie.Internal
  other-extensions:    
  build-depends:       base               >=4.7   && <4.8
                     , mtl                >=2.1   && <2.3
                     , transformers       >=0.3   && <0.5
                     , bytestring         >=0.10  && <0.11
                     , apiary             >=0.4   && <0.5
                     , cookie             >=0.4   && <0.5
                     , clientsession      >=0.9   && <0.10
                     , reflection         >=1.4   && <1.5
                     , blaze-builder      >=0.3   && <0.4
                     , data-default-class >=0.0   && <0.1

  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
