name:                apiary-cookie
version:             0.17.0
synopsis:            Cookie support for apiary web framework.
description:
  example: <https://github.com/philopon/apiary/blob/master/examples/auth.hs>
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           experimental
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.Cookie
  build-depends:       base               >=4.6  && <4.8
                     , apiary             >=0.16 && <0.18

                     , bytestring         >=0.10 && <0.11
                     , cookie             >=0.4  && <0.5
                     , time               >=1.4  && <1.6
                     , blaze-builder      >=0.3  && <0.4
                     , blaze-html         >=0.7  && <0.8

  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
