name:                apiary-eventsource
version:             1.2.0
synopsis:            eventsource support for apiary web framework.
description:
  example: <https://github.com/philopon/apiary/blob/master/examples/eventsource.hs>
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           stable
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.EventSource
  build-depends:       base              >=4.6  && <4.8
                     , apiary            >=1.1  && <1.3
                     , blaze-builder     >=0.3  && <0.4
                     , wai-extra         >=3.0  && <3.1
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
