name:                apiary-helics
version:             1.1.4
synopsis:            helics support for apiary web framework.
description:         helics support for apiary web framework.
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           experimental
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.Helics
  other-modules:       
  build-depends:       base               >=4.6   && <4.8
                     , apiary             >=1.1   && <1.2
                     , helics             >=0.5   && <0.6
                     , helics-wai         >=0.5   && <0.6
                     , vault              >=0.3   && <0.4
                     , transformers       >=0.3   && <0.5
                     , monad-control      >=0.3   && <0.4
                     , wai                >=3.0   && <3.1
                     , bytestring         >=0.10  && <0.11
                     , text               >=1.1   && <1.3
                     , data-default-class >=0.0   && <0.1

  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
