name:                apiary-logger
version:             0.11.0
synopsis:            fast-logger support for apiary web framework.
description:
  example: <https://github.com/philopon/apiary/blob/master/examples/persistent.hs>
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           experimental
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.Logger
  other-modules:       Web.Apiary.Logger.Internal
  build-depends:       base               >=4.6   && <4.8
                     , apiary             >=0.8   && <0.12
                     , fast-logger        >=2.1   && <2.2
                     , monad-logger       >=0.3   && <0.4
                     , reflection         >=1.4   && <1.5
                     , data-default-class >=0.0   && <0.1
                     , monad-control      >=0.3   && <0.4
                     , mtl                >=2.1   && <2.3
                     , transformers-base  >=0.4   && <0.5
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
