name:                apiary-memcached
version:             1.2.1
synopsis:            memcached client for apiary web framework.
-- description:
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           stable
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.Memcached
  other-modules:       
  build-depends:       base               >=4.6   && <4.8
                     , apiary             >=1.1   && <1.3
                     , memcached-binary   >=0.1   && <0.3
                     , data-default-class >=0.0   && <0.1
                     , bytestring         >=0.10  && <0.11
                     , text               >=1.1   && <1.3
                     , transformers       >=0.3   && <0.5
                     , monad-control      >=0.3   && <0.4
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
