name:                apiary-mongoDB
version:             1.3.0
synopsis:            mongoDB support for apiary web framework.
-- description:
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014-2015 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           stable
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.MongoDB
  other-modules:       
  build-depends:       base               >=4.6   && <4.8
                     , apiary             >=1.2   && <1.4
                     , mongoDB            >=2.0   && <2.1
                     , resource-pool      >=0.2   && <0.3
                     , data-default-class >=0.0   && <0.1
                     , transformers       >=0.2   && <0.5
                     , time               >=1.4   && <1.6
                     , lifted-base        >=0.2   && <0.3
                     , bson               >=0.3   && <0.4
                     , monad-control      >=0.3   && <1.1
                     , text               >=1.1   && <1.3
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
